# git-ripper

./: .gitignore  README.md  pyproject.toml  urls.txt
.github/workflows/: poetry.yml
.github/workfows/: poetry.yml
git_ripper/: __main__.py  cli.py  constants.py  defaults.py  git_ripper.py  log.py
git_ripper/utils/: colorlog.py  git.py  logging.py  termcolors.py
